Added gem to manage dependencies and fine tuned styles.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -192,6 +192,10 @@ en:
       user:
         description: "Check %{user} donations on TrackDons and get inspiration to donate"
         title: "%{user} profile"
+  cookies_eu:
+    cookies_text: "Cookies help us deliver our services. By using our services, you agree to our use of cookies."
+    learn_more: "Learn more"
+    ok: "OK"
   date:
     formats:
       wadus: "%b %d %Y"
