Complete locales file and added rails-i18n gem to complete the locales of helpers and other Rails stuff

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,4 +1,32 @@
 es:
+  activerecord:
+    errors:
+      messages:
+        record_invalid: "Error al guardar"
+    models:
+      user: Usuario
+      invitation: Invitación
+      category: Categoría
+      donation: Donación
+      project: Proyecto
+      recurring_donation: Donación recurrente
+    attributes:
+      invitation:
+        invited_email: E-mail
+        user: Usuario
+      project:
+        name: Nombre
+        url: URL
+        description: Descripción
+        category_id: Categoría
+        donation_url: URL de donaciones
+      donation:
+        date: Fecha
+        project_id: Proyecto
+        quantity: Cantidad
+        currency: Moneda
+        user_id: Usuario
+        comment: Comentario
   language_name: 'Español'
   hello: "Hello world"
   # generics
@@ -193,4 +221,4 @@ es:
         title: "Perfil de %{user}"
   date:
     formats:
-      wadus: "%d.%m.%Y"
+      donation: "%d.%m.%Y"
