--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,8 +114,30 @@ en:
     user_links:
       hello: "Hello %{name}"
       log_out: Log out
-      login: Login
+      login: Login to TrackDons
       track_your_first_donation: Track your first donation
+  sessions:
+    new:
+      login: Login to TrackDons
+      remember_me: Remember me on this computer
+      forgot_password: 'Forgot password?'
+      login_action: Log in
+  password_resets:
+    password_reset_subject: Reset your password at TrackDons
+    new:
+      reset_your_password: Reset your password
+      email: Email
+      continue: Continue
+      enter_your_email: 'Enter your email to recover your password:'
+    create:
+      invalid_email: Invalid email address
+      success: We have just sent you an email with a link to recover your password
+    edit:
+      reset_your_password: Reset your password
+      save: Save changes
+      enter_your_password: 'Enter your new password:'
+    update:
+      success: Password updated successfully
   users:
     invite: 'Invite a friend'
     you_already_have_an_account: 'You already have an account! Save that invitation for someone else...'
@@ -132,7 +154,6 @@ en:
       edit_your_profile: Edit your profile
     index:
       please_log_in: Please log in
-    remember_me: Remember me on this computer
   invitations:
     dont_have_enough_invitations: You don't have enough invitations. Keep tracking donations and more, and you will get them!
     pending_invites: "You have %{count} invites available. Put them to good use and let your friends promote the projects they donate to."
@@ -165,6 +186,15 @@ en:
         - You have a new invitation available. Isn't that fantastic? Think on your next-most-active-donator friend, and call him (err... also remember to invite him)
 
         We are always happy to hear from fellow donators, reach us at lets@trackdons.org
+    password_reset:
+      password_reset_email: |
+        Hi,
+
+        Click on the following link to recover your password:
+
+        %{url}
+
+        If you have any comment, just write us to lets@trackdons.org
   metas:
     home:
       description: TrackDons is a donation diary for projects that matter to you. An online experience to help with your donation efforts      
