--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -193,6 +193,8 @@ es:
     invitation_sent: 'Genial, tu invitación ha sido enviada. Veamos si tu amigo/a es tan buena persona como tú ;)'
     not_valid: 'Mmm.... Tu invitación no parece válida.'
     welcomme_message: '¡Genial! Con esta invitación te puedes registrar en TrackDons y empezar a registrar tus donaciones. Y después de registrar las primeras, recibirás invitaciones para que puedas animar a tus amigos a registrarse.'
+    alive_and_donating: registrado y donando ;)
+    not_yet_a_user: todavía no se ha registrado :( dále un toque!
   user_mailer:
     send_invitation: 
       send_invitation_mail: |
@@ -253,6 +255,9 @@ es:
         description: "Mira las donaciones de %{user} en TrackDons e inspírate para donar"
         title: "Perfil de %{user}"
   date:
+    formats:
+      donation: "%d.%m.%Y"
+  time:
     formats:
       donation: "%d.%m.%Y"
   helpers:
