--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -195,3 +195,9 @@ en:
   date:
     formats:
       donation: "%b %d %Y"
+    picker:
+      previousMonth: 'Previous Month'
+      nextMonth: 'Next Month'
+      months: ['January','February','March','April','May','June','July','August','September','October','November','December']
+      weekdays: ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday']
+      weekdaysShort : ['Sun','Mon','Tue','Wed','Thu','Fri','Sat']
