--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -222,3 +222,9 @@ es:
   date:
     formats:
       donation: "%d.%m.%Y"
+    picker:
+      previousMonth: 'Mes Anterior'
+      nextMonth: 'Mes Siguiente'
+      months: ['Enero','Febrero','Marzo','Abril','Mayo','Junio','Julio','Agosto','Septiembre','Octubre','Noviembre','Diciembre']
+      weekdays: ['Domingo','Lunes','Martes','Miércoles','Jueves','Viernes','Sábado']
+      weekdaysShort: ['Do','Lu','Ma','Mi','Ju','Vi','Sa']
