Big banner for welcoming user / user who has yet no donation tracked

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -159,6 +159,9 @@ en:
       in_total: in total
     show:
       edit_your_profile: Edit your profile
+      track_your_first_donation: Track your first donation
+      get_started: 'Get started right now:'
+      welcome: 'Welcome! Use TrackDons to keep track of the projects you have supported, and share your donations to inspire your friends.'
     index:
       please_log_in: Please log in
   invitations:
