--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,7 @@ en:
     invite_your_friends_to_this_page: 'Invite your friends to this page'
     index:
       global: Global
+      any_category: Any category
       categories: Categories
       countries: Countries
       latest: Latest
