--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -125,6 +125,7 @@ es:
     invite_your_friends_to_this_page: 'Invita a tus amigos a esta página'
     index:
       global: Global
+      any_category: Cualquier categoría
       categories: Categorías
       countries: Países
       latest: Últimos
