--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -125,7 +125,7 @@ es:
     invite_your_friends_to_this_page: 'Invita a tus amigos a esta página'
     index:
       global: Global
-      any_category: Cualquier categoría
+      any_category: Todas
       categories: Categorías
       countries: Países
       latest: Últimos
