--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -156,6 +156,7 @@ en:
       remember_me: Remember me on this computer
       forgot_password: 'Forgot password?'
       login_action: Log in
+      login_with_twitter: Log in with Twitter
   password_resets:
     password_reset_subject: Reset your password at TrackDons
     new:
@@ -193,6 +194,25 @@ en:
       not_following_projects_yet: 0 projects followed
     index:
       please_log_in: Please log in
+    edit:
+      update_your_profile: Update your profile
+      save: Save changes
+      gravatar: Change your avatar at gravatar.com
+    sidebar:
+      update_your_profile: Update your profile
+      external_services: External services
+      profile_options: Profile options
+  external_authentications:
+    index:
+      external_services: External services
+      unlink: Unlink account
+      link: Link %{account} account
+    create:
+      link_successful: Account linked successfully
+    destroy:
+      unlink_successful: Account unlinked successfully
+  external_service_unauthorized:
+    unauthorized: Service couldn't be linked
   invitations:
     dont_have_enough_invitations: You don't have enough invitations. Keep tracking donations and more, and you will get them!
     pending_invites: "You have %{count} invites available. Put them to good use and let your friends promote the projects they donate to."
