Trying to implement the new donation form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -125,6 +125,7 @@ en:
       do_you_want_to_actually_donate: Do you want to actually donate to the project?
       invite_your_friends_to_this_page: Invite your friends to this page
       follow: Follow
+      thinking_on_donating: Thinking on donating
       trackdon: TrackDon
       donations_number: 
         one: '%{count} donation'
