--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -153,6 +153,7 @@ es:
       do_you_want_to_actually_donate: ¿Quieres donar al proyecto?
       invite_your_friends_to_this_page: Invita a tus amigos a esta página
       follow: Seguir
+      thinking_on_donating: Pensando en donar
       trackdon: TrackDon
       donations_number: 
         one: '%{count} donación'
